# wgpu-test

./: Cargo.toml  README.md  build.rs
shaders/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
src/: camera.rs  input.rs  main.rs  uniform.rs
