[package]
name = "wgpu-test"
version = "0.1.0"
authors = ["Wojciech Polak <wojciech.polak@anixe.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.5.0"
winit = "0.22.2"
env_logger = "0.7.1"
futures = "0.3.5"
anyhow = "1.0.31"
cgmath = "0.17.0"
bytemuck = "1.2.0"

[build-dependencies]
glsl-to-spirv = "0.1.5"
